--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,12 @@ plugins {
 group = 'com.example.common'
 version = '1.0-SNAPSHOT'
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
 repositories {
     mavenCentral()
 }
